# statzni

./: AUTHORS  Makefile  README.md  configure.ac  io.c  main.c  output.c  output.h  parser.c  parser.h  state.c  state.h  user.c  user.h
src/: Makefile.am  io.c  io.h  main.c  output.c  output.h  parser.c  parser.h  state.c  state.h  stridx.c  stridx.h  user.c  user.h
